更新ID生成支持JAVA21 虚拟线程